Fix: Fixing the auth-api documentation
